Fixed margin-left 4-column layout bug

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,14 +61,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
 }
 
 h2 {
-  font-size: 1.7em;
+  font-size: 1.4em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
@@ -77,7 +77,7 @@ h2 {
 }
 
 p {
-  font-size: 1.1em;
+  font-size: 1em;
   line-height: 1.7em;
 }
 
@@ -206,7 +206,7 @@ button, .cta, input[type="submit"] {
   top: 50px;
   // overflow:hidden;
   height:100%;
-  margin-left: 250px;
+  margin-left: 275px;
   position:relative;
   #grid {
     top: 20px;
@@ -430,7 +430,7 @@ footer {
   #main {
     overflow:hidden;
     height:100%;
-    margin-left: 250px;
+    margin-left: 275px;
     position:relative;
     #grid {
       top: 20px;
